# zsplit

./: .gitignore  README  zsplit.cabal
src/: zsplit.hs
